--- a/app/assets/javascripts/templates/edit_role.html.erb
+++ b/app/assets/javascripts/templates/edit_role.html.erb
@@ -2,7 +2,7 @@
 	<div class="container"> 
 	<div class="bcg" style="height:600px">   
 	    <div class="category-wall">
-			<form class="form-register" name="myForm" ng-controller="UpdateRoleControler">
+			<form class="form-register" name="myForm" ng-controller="UpdateRoleControler2">
 
 			  	<h1 class="text-center login-title"> Izmjena role </h1>
 
