--- a/app/assets/javascripts/templates/update_category.html.erb
+++ b/app/assets/javascripts/templates/update_category.html.erb
@@ -2,7 +2,7 @@
 	<div class="container"> 
 	<div class="bcg" style="height:600px">   
 	    <div class="category-wall">
-			<form class="form-register" name="myForm" ng-controller="UpdateCategoryController">
+			<form class="form-register" name="myForm" ng-controller="UpdateCategoryController2">
 
 			  	<h1 class="text-center login-title"> Izmjena kategorije </h1>
 
@@ -27,7 +27,7 @@
 
 				<!-- submit button-->
 				<div class="actions">
-				  <button class="btn btn-lg btn-primary btn-block" ng-click="updateCategoryC()"  ng-disabled="myForm.$invalid">Kreiraj</button>
+				  <button class="btn btn-lg btn-primary btn-block" ng-click="updateCategoryC()"  ng-disabled="myForm.$invalid">Izmijeni</button>
 				</div>
 			  </form>
 			</div>
