--- a/app/assets/javascripts/templates/category_admin.html.erb
+++ b/app/assets/javascripts/templates/category_admin.html.erb
@@ -1,5 +1,32 @@
-<div class="navbar" navbar></div>
-</br></br>
+<head>
+    <!--font for icon in circle button on home page-->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+</head>
+<!--navbar-->
+<nav class="navbar navbar-custom navbar-fixed-top ribbon nblue" role="navigation">
+    <div class="localization-bs-en" localization-bs-en></div>
+     <div class="container" ng-controller="HomeAdminController">
+        <div class="navbar-header page-scroll">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+              <i class="fa fa-bars"></i>
+        </button>
+        <a class="navbar-brand" href ng-click="openHomeAdmin()">
+           <h1 class="naslov1">eSAVJETOVALISTE</h1>
+        </a>
+          </div>
+          <div class="collapse navbar-collapse navbar-right navbar-main-collapse navbar-font">
+           <ul class="nav navbar-nav navbar-font">
+           <li><a href ng-click="openHomeAdmin()"><span>{{ "HOME" | translate }}</span></a></li>
+         <li><a href ng-click="logout()"><span>{{ "LOGOUT" | translate }}</span></a></li>
+            </ul>
+          </div>
+       </div>
+   </nav>
+<!--/.navbar-->
+</br></br></br></br></br></br>
 <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alert.close()">{{ alert.msg }}</alert>
 <br>
 <div class="pretraga">
