--- a/app/assets/javascripts/templates/changepass.html.erb
+++ b/app/assets/javascripts/templates/changepass.html.erb
@@ -1,11 +1,52 @@
 <!--Form for password change for user that is logged in-->
-<div class="container"> 
-	<div class="bcg" style="height:600px">   
-	    <div class="change-wall">
+<head>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+</head> 
+	<div class="bcgnonee"> 
+		<!--navbar-->
+		<nav class="navbar navbar-custom navbar-fixed-top ribbon nblue" role="navigation">
+		    <div class="localization-bs-en" localization-bs-en></div>
+		     <div class="container" ng-controller="HomeAdminController">
+		        <div class="navbar-header page-scroll">
+		           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+		              <i class="fa fa-bars"></i>
+		        </button>
+		        <a class="navbar-brand" href ng-click="openHomeAdmin()">
+		           <h1 class="naslov1">eSAVJETOVALISTE</h1>
+		        </a>
+		          </div>
+		          <div class="collapse navbar-collapse navbar-right navbar-main-collapse navbar-font">
+		           <ul class="nav navbar-nav navbar-font">
+		           <li><a href ng-click="openHomeAdmin()"><span>{{ "HOME" | translate }}</span></a></li>
+		         <li><a href ng-click="logout()"><span>{{ "LOGOUT" | translate }}</span></a></li>
+		            </ul>
+		          </div>
+		       </div>
+		   </nav>
+		<!--/.navbar-->
+		</br></br></br></br></br></br> 
+		<div class="heading-contact-title">
+	            <div class="container">
+	            <div class="row">
+	                <div class="col-lg-8 col-lg-offset-2">
+	                    <div class="wow bounceInDown animated" data-wow-delay="0.4s" style="visibility: visible;-webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; animation-delay: 0.4s;">
+	                    <div class="section-heading">
+	                    <h2>{{ 'EDITUSRMNG' | translate }}</h2>
+	                    <i class="fa fa-2x fa-angle-down"></i>
+
+	                    </div>
+	                    </div>
+	                </div>
+	            </div>
+	            </div>
+	    </div> 
+	    <div class="container">    
+		<div class="bcgnone" style="height:600px">
+	    <div class="edit-user-by-mng-wall">
 
 	    <form class="form-register form-inline" role="form" name="myForm" ng-controller="ChangePassController">
-	    	<!--title-->
-			<h1 class="text-center login-title"> Promjena passworda </h1>
 
 			<!-- input current password-->
 			<div class="input-prepend  form-group has success has-feedback">
