background picture image change

--- a/app/assets/javascripts/templates/login.html.erb
+++ b/app/assets/javascripts/templates/login.html.erb
@@ -1,7 +1,11 @@
 <!--Login form-->
-<div class="container">  
-  <div class="bcg" style="height:600px">  
+  
+ 
+  <div id="background">
+    <img src="/assets/bcgnwt1.jpg" class="stretch" alt="" /> 
     <div class="localization-bs-en" localization-bs-en></div> 
+    <div class="container">    
+    <div style="height:600px">
     <div class="account-wall">
         <form class="form-signin form-inline" role="form" name="myForm" ng-controller="LoginController">
         <!--title-->
@@ -53,5 +57,5 @@
 </div>
 
 </div>
-
+</div>
 <div id="copyright">© Copyright 2015</div>
