--- a/app/assets/javascripts/templates/register.html.erb
+++ b/app/assets/javascripts/templates/register.html.erb
@@ -4,8 +4,10 @@
 	<!--<script src='https://www.google.com/recaptcha/api.js'></script>-->
 </head>
 <body>
+<div id="background">
+    <img src="/assets/bcgnwt1.jpg" class="stretch" alt="" /> 
 	<div class="container">    
-	<div class="bcg" style="height:600px">
+	<div style="height:600px">
 	    <div class="register-wall">
 			<form class="form-register form-inline" role="form" name="myForm" ng-controller="RegistrationController">
 
