--- a/app/assets/javascripts/templates/password-reset.html.erb
+++ b/app/assets/javascripts/templates/password-reset.html.erb
@@ -1,27 +1,30 @@
 <!--Form for password reset after user hits forgot account button-->
-<div class="container">
-  <div class="bcg" style="height:600px">
-    <div class="forgot-acc">
-      <form class="form-signin form-inline" role="form" name="myForm" ng-controller="ResetController">
-        <!--title-->
-        <h1 class="text-center login-title">eSavjetovaliste</h1>
+<div id="background">
+    <img src="/assets/bcgnwt1.jpg" class="stretch" alt="" /> 
+    <div class="container">
+      <div style="height:600px">
+        <div class="forgot-acc">
+          <form class="form-signin form-inline" role="form" name="myForm" ng-controller="ResetController">
+            <!--title-->
+            <h1 class="text-center login-title">eSavjetovaliste</h1>
 
-  			<!-- input email-->
-        <div class="input-prepend form-group has success has-feedback">
-          <label class="control-label" for="inputSuccess4"></label>
-          <input name="email" type="email" class="form-control" placeholder="E-mail" ng-model="user.email" required autofocus id="inputSuccess4"/>
-          <span class="glyphicon glyphicon-envelope form-control-feedback"></span></br></br>
-          <!--email validation (client side)-->
-          <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
-            <span ng-show="myForm.email.$error.required">Unos emaila je obavezan.</span>
-            <span ng-show="myForm.email.$error.email">Format email addrese nije dobar.</span>
-          </span> 
+      			<!-- input email-->
+            <div class="input-prepend form-group has success has-feedback">
+              <label class="control-label" for="inputSuccess4"></label>
+              <input name="email" type="email" class="form-control" placeholder="E-mail" ng-model="user.email" required autofocus id="inputSuccess4"/>
+              <span class="glyphicon glyphicon-envelope form-control-feedback"></span></br></br>
+              <!--email validation (client side)-->
+              <span style="color:red" ng-show="myForm.email.$dirty && myForm.email.$invalid">
+                <span ng-show="myForm.email.$error.required">Unos emaila je obavezan.</span>
+                <span ng-show="myForm.email.$error.email">Format email addrese nije dobar.</span>
+              </span> 
+            </div>
+
+            <!--submit button-->
+      	    <button class="btn btn-lg btn-primary btn-block" ng-click="doReset()"  ng-disabled="loginForm.$invalid">Potvrdi</button>
+          </form>
         </div>
-
-        <!--submit button-->
-  	    <button class="btn btn-lg btn-primary btn-block" ng-click="doReset()"  ng-disabled="loginForm.$invalid">Potvrdi</button>
-      </form>
+      </div>
     </div>
-  </div>
+    <div id="copyright">© Copyright 2015</div>
 </div>
-<div id="copyright">© Copyright 2015</div>
