--- a/app/assets/javascripts/templates/role_admin.html.erb
+++ b/app/assets/javascripts/templates/role_admin.html.erb
@@ -54,7 +54,7 @@
         <td> {{role.description}}</td>
         <td>
           <div class="actions"> 
-          <button class="btn btn-primary" ng-controller="UpdateRoleControler" ng-click="updateRoleRead(role.id)"  ng-disabled="myForm.$invalid">Izmijeni</button>
+          <button class="btn btn-primary btn-usr-mng" ng-controller="UpdateRoleControler" ng-click="updateRoleRead(role.id)"  ng-disabled="myForm.$invalid">Izmijeni</button>
           </div>
           <div class="actions" >
             <button class="btn btn-primary btn-usr-mng" ng-click="deleteRole(role.id, $index)"  ng-disabled="myForm.$invalid">Obriši</button>
