--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -139,16 +139,36 @@ a:hover{
 /*end of design for login form*/
 
 /*application backround*/
+#background {
+    width: 100%; 
+    height: 100%; 
+    position: fixed; 
+    left: 0px; 
+    top: 0px; 
+    z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
+}
+
+.stretch {
+    width:100%;
+    height:100%;
+}
 .bcg {
-content: ""; 
+  display: block;
+  position: relative;
+}
+
+.bcg::after {
+  content: "";
   background: url('/assets/bcgnwt1.jpg') no-repeat center center fixed !important; 
   top: 0;
   left: 0;
-  width:100%;
+  bottom: 0;
+  right: 0;
+  background-size: cover;
   position: absolute;
-   
- 
+  z-index: -1;   
 }
+
 /*end of application backround*/
 
 /*application footer*/
