--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1035,3 +1035,6 @@ animation-timing-function:ease-out
   margin-left:50px;
 }
 /*end of home page doctors*/
+.time-size{
+  width:50px !important;
+}
