--- a/app/assets/javascripts/templates/new_resource.html.erb
+++ b/app/assets/javascripts/templates/new_resource.html.erb
@@ -1,4 +1,5 @@
-<div classs="container">
+<div class="navbar" navbar></div>
+<div style="margin-top:70px;">
   <div class="row">
        <div class="col-lg-4">
        </div>
@@ -11,7 +12,7 @@
 	                                <input type="file" nv-file-select uploader="uploader"/>
 	                            </div>
 					      		<div class="col-md-12">
-	                            	<button type="submit" class="btn btn-primary">Upload</button>
+	                            	<button style="float:right;" type="submit" class="btn btn-primary">Upload</button>
 	                        	</div>
 					  		</div>
 	                    </div>
@@ -21,5 +22,3 @@
 	</div>
 </div>
  
-
-<div id="copyright">© Copyright 2015</div>
