--- a/app/assets/javascripts/templates/changepass.html.erb
+++ b/app/assets/javascripts/templates/changepass.html.erb
@@ -8,7 +8,7 @@
 		<!--navbar-->
 		<nav class="navbar navbar-custom navbar-fixed-top ribbon nblue" role="navigation">
 		    <div class="localization-bs-en" localization-bs-en></div>
-		     <div class="container" ng-controller="HomeAdminController">
+		     <div class="container" ng-controller="HomeController">
 		        <div class="navbar-header page-scroll">
 		           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 		              <i class="fa fa-bars"></i>
