--- a/app/assets/javascripts/templates/edit_reservation.html.erb
+++ b/app/assets/javascripts/templates/edit_reservation.html.erb
@@ -12,9 +12,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="wow bounceInDown animated" data-wow-delay="0.4s" style="visibility: visible;-webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; animation-delay: 0.4s;">
                     <div class="section-heading">
-                    <h2>Rezervacija</h2>
+                    <h2>{{ 'RESERVATION' | translate }}</h2>
                     <i class="fa fa-2x fa-angle-down"></i>
-
                     </div>
                     </div>
                 </div>
@@ -22,8 +21,13 @@
             </div>
     </div>
 	<div class="col-lg-10 col-lg-offset-2">
-        <div class="boxed-grey"  ng-controller="EditReservationController">
-            <form id="reservation-form" name="reservationForm">
+        <div class="boxed-grey" style="padding-top:10px;"  ng-controller="EditReservationController">
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-lg-12">
+        <pre class="alert alert-info" style="text-align:center;"> {{ 'SEL_APP' | translate }}: <em>{{dt | date:'dd-MM-yyyy' }}, {{mytime | date:'HH:mm' }} </em></pre>
+        </div>
+        </div>
+            <form id="reservation-form" name="reservationForm" style="margin-left:5%;">
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-lg-6">
                         <div class="form-group">
@@ -32,69 +36,47 @@
                             </label>
                             <!--<div class="input-group">-->
                                 <label class="control-label" for="inputSuccess4"></label>
-                                <select class="form-control" ng-model="user" ng-options="user.name for user in users | filter:{role_id:3} track by user.id " required id="inputSuccess4"></br></br>
+                                <select style="width:350px;margin-bottom:5px;" class="form-control" ng-model="user" ng-options="user.name for user in users | filter:{role_id:3} track by user.id " required id="inputSuccess4"></br></br>
                                 </select>
-                                <label for="user.job">
+                                <div for="user.job">
                                 {{ 'PROFESSION' | translate }}: {{user.job}}
-                                </label>
+                                </div>
                             <!--</div>-->
                         </div>
                         <div class="form-group">
                             <label for="description">
                                 {{ 'DSC' | translate }}</label>
-                            <textarea name="message" ng-model="reservation.description" class="formf-control" rows="9" cols="25" required="required" placeholder="Description"></textarea>
+                            <textarea name="message" ng-model="reservation.description" class="formf-control msg-desc" rows="9" cols="25" required="required" placeholder="Description"></textarea>
                         </div>
                         <div class="form-group">
                             <label for="subject">
                                 {{ 'TYPEF' | translate }}</label>
-                            <select ng-model="reservation.form" ng-options="form for form in forms" class="formf-control" required="required">
+                            <select style="width:350px;" ng-model="reservation.form" ng-options="form for form in forms" class="form-control" required="required">
                             </select>
                         </div>
                     </div>
                     <div class='col-sm-6 col-md-6 col-lg-6'>
                         <div class="form-group">
-                           <h4> {{ 'APPOINTMENTDATE' | translate }}</h4>
-                            <div style="display:inline-block; min-height:290px;">
-                              <datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm time" custom-class="getDayClass(date, mode)"></datepicker>
-                            </div>
-                        <h4>Time</h4>
-                             <div class="my-timepicker">
-     <table ng-model="mytime" class="time-size ng-isolate-scope ng-valid ng-valid-time ng-dirty" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian">
-    <tbody>
-        <tr class="text-center">
-            <td><a ng-click="incrementHours()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-up"></span></a></td>
-            <td>&nbsp;</td>
-            <td><a ng-click="incrementMinutes()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-up"></span></a></td>
-            <td ng-show="showMeridian"></td>
-        </tr>
-        <tr>
-            <td style="width:50px;" class="form-group" ng-class="{'has-error': invalidHours}">
-                <input type="text" ng-model="hours" ng-change="updateHours()" class="form-control time-size text-center ng-pristine ng-untouched ng-valid ng-valid-maxlength" ng-mousewheel="incrementHours()" ng-readonly="readonlyInput" maxlength="2">
-            </td>
-            <td>:</td>
-            <td style="width:50px;" class="form-group" ng-class="{'has-error': invalidMinutes}">
-                <input type="text" ng-model="minutes" ng-change="updateMinutes()" class="form-control time-size text-center ng-pristine ng-untouched ng-valid ng-valid-maxlength" ng-readonly="readonlyInput" maxlength="2">
-            </td>
-            <td ng-show="showMeridian"><button type="button" class="btn btn-default text-center ng-binding" ng-click="toggleMeridian()">AM</button></td>
-        </tr>
-        <tr class="text-center">
-            <td><a ng-click="decrementHours()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-down"></span></a></td>
-            <td>&nbsp;</td>
-            <td><a ng-click="decrementMinutes()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-down"></span></a></td>
-            <td ng-show="showMeridian"></td>
-        </tr>
-    </tbody>
-</table>
+                        <div><label> {{ 'APPOINTMENTDATE' | translate }}</label></div>
+                        <div style="display:inline-block;">
+                            <datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm time" custom-class="getDayClass(date, mode)"></datepicker>
                         </div>
-                                                </div>
-                                            </div>
+                        <div><label class="time-title">{{ 'TIME' | translate }}</label></div>
+                        <div class="row">
+                        <div class="col-md-6 col-lg-6">
+                        <div class="time-picker">
+                        <timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker></div>
                         </div>
-                     <div class="row">
-                    <div class="col-md-12">
-                        <button type="submit" class="btn btn-primary" id="btnf" ng-click="editReservation()" ng-disabled="reservationForm.$invalid">
-                            POTVRDI</button>
+                         <div class="col-md-6 col-lg-6">
+                        <button type="submit" class="btn btn-primary res-button" id="btnf" ng-click="editReservation()" ng-disabled="reservationForm.$invalid">
+                            {{ 'EDIT' | translate }}
+                        </button>
                     </div>
                     </div>
+                        </div>
+                    </div>
+                    </div>
+                   
                 </div>
             </form>
         </div>
