--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -112,7 +112,7 @@ h2{
     <!-- Section: intro -->
     <section id="intro" class="intro">
         <div class="slogan">
-            <h3 id="main-title">{{ 'WELCOME' | translate }} {{ userName }}</h3>
+            <h3 id="main-title">{{ 'WELCOME' | translate }}, {{ userName }}!</h3>
         </div>
     </section>
     </div>
@@ -279,16 +279,15 @@ h2{
                 </div>
                 </div>
             </div>
-<div class="container">
     
-    <div class="col-lg-10 col-md-10 col-lg-offset-2 col-md-offset-2">
-        <div class="boxed-grey"  ng-controller="ReservationController">
+    <div class="col-lg-12 col-md-12 col-lg-offset-2 col-md-offset-2">
+        <div class="boxed-grey"  style="padding-top:10px;"  ng-controller="ReservationController">
         <div class="row">
         <div class="col-md-12 col-sm-12 col-lg-12">
-        <pre class="alert alert-info" style="text-align:center;">Selected appointment date is: <em>{{dt | date:'fullDate' }}</em>, at {{mytime | date:'shortTime' }}</pre>
+        <pre class="alert alert-info" style="text-align:center;"> {{ 'SEL_APP' | translate }}: <em>{{dt | date:'dd-MM-yyyy' }}, {{mytime | date:'HH:mm' }} </em></pre>
         </div>
         </div>
-            <form id="reservation-form" name="reservationForm">
+            <form id="reservation-form" name="reservationForm" style="margin-left:5%;">
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-lg-6">
                         <div class="form-group">
@@ -297,67 +296,45 @@ h2{
                             </label>
                             <!--<div class="input-group">-->
                                 <label class="control-label" for="inputSuccess4"></label>
-                                <select class="form-control" ng-model="user" ng-options="user.name for user in users | filter:{role_id:3} track by user.id " required id="inputSuccess4"></br></br>
+                                <select  style="width:350px;margin-bottom:5px;" class="form-control" ng-model="user" ng-options="user.name for user in users | filter:{role_id:3} track by user.id " required id="inputSuccess4"></br></br>
                                 </select>
-                                <label for="user.job">
+                                <div for="user.job">
                                 {{ 'PROFESSION' | translate }}: {{user.job}}
-                                </label>
+                                </div>
                             <!--</div>-->
                         </div>
                         <div class="form-group">
-                            <label for="description">
+                           <label for="description">
                                 {{ 'DSC' | translate }}</label>
-                            <textarea name="message" ng-model="reservation.description" class="formf-control" rows="9" cols="25" required="required" placeholder="Description"></textarea>
+                            <textarea name="message" ng-model="reservation.description" class="formf-control msg-desc" rows="9" cols="25" required="required" placeholder="Description"></textarea>
                         </div>
                     </div>
                     <div class='col-sm-6 col-md-6 col-lg-6'>
                         <div class="form-group">
-                           <h4> {{ 'APPOINTMENTDATE' | translate }}</h4>
-    <div style="display:inline-block; min-height:290px;">
+                           <div><label> {{ 'APPOINTMENTDATE' | translate }}</label></div>
+    <div style="display:inline-block;">
       <datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm time" custom-class="getDayClass(date, mode)"></datepicker>
     </div>
-<h4>Time</h4>
-     <div class="my-timepicker">
-     <table ng-model="mytime" class="time-size ng-isolate-scope ng-valid ng-valid-time ng-dirty" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian">
-    <tbody>
-        <tr class="text-center">
-            <td><a ng-click="incrementHours()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-up"></span></a></td>
-            <td>&nbsp;</td>
-            <td><a ng-click="incrementMinutes()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-up"></span></a></td>
-            <td ng-show="showMeridian"></td>
-        </tr>
-        <tr>
-            <td style="width:50px;" class="form-group" ng-class="{'has-error': invalidHours}">
-                <input type="text" ng-model="hours" ng-change="updateHours()" class="form-control time-size text-center ng-pristine ng-untouched ng-valid ng-valid-maxlength" ng-mousewheel="incrementHours()" ng-readonly="readonlyInput" maxlength="2">
-            </td>
-            <td>:</td>
-            <td style="width:50px;" class="form-group" ng-class="{'has-error': invalidMinutes}">
-                <input type="text" ng-model="minutes" ng-change="updateMinutes()" class="form-control time-size text-center ng-pristine ng-untouched ng-valid ng-valid-maxlength" ng-readonly="readonlyInput" maxlength="2">
-            </td>
-            <td ng-show="showMeridian"><button type="button" class="btn btn-default text-center ng-binding" ng-click="toggleMeridian()">AM</button></td>
-        </tr>
-        <tr class="text-center">
-            <td><a ng-click="decrementHours()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-down"></span></a></td>
-            <td>&nbsp;</td>
-            <td><a ng-click="decrementMinutes()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-down"></span></a></td>
-            <td ng-show="showMeridian"></td>
-        </tr>
-    </tbody>
-</table>
+<div class="row">
+                        <div class="col-md-6 col-lg-6">
+                        <div class="time-picker">
+                        <timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker></div>
                         </div>
+                         <div class="col-md-6 col-lg-6">
+                        <button type="submit" class="btn btn-primary res-button" id="btnf" ng-click="sendReservation()" ng-disabled="reservationForm.$invalid">
+                            {{ 'SENDRESERVATION' | translate }}
+                        </button>
+                    </div>
+                    </div>
                         </div>
                     </div>
                         </div>
-         <div class="row">
-                    <div class="col-md-12">
-                        <button type="submit" class="btn btn-primary" id="btnf" ng-click="sendReservation()" ng-disabled="reservationForm.$invalid">
-                            {{ 'SENDRESERVATION' | translate }}</button>
-                    </div>
-                </div>
             </form>
+            <div>
+          <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alert.close()">{{ alert.msg }}</alert>
+        </div>
         </div>
     </div>
-</div>
 
 <!--to-->
 <!--<div class="row">
@@ -455,7 +432,7 @@ h2{
         <div class="row">
 
             <div class="col-lg-8">
-                <div class="boxed-grey"  ng-controller="FeedbackController">
+                <div class="boxed-grey"  ng-controller="FeedbackController" style="margin-bottom:30px;">
                     <form id="contact-form" name="feedbackForm">
                     <div class="row">
                         <div class="col-md-6">
