--- a/app/assets/javascripts/templates/login.html.erb
+++ b/app/assets/javascripts/templates/login.html.erb
@@ -2,8 +2,31 @@
   
  
   <div id="background">
-    <img src="/assets/bcgnwt1.jpg" class="stretch" alt="" /> 
-    <div class="localization-bs-en" localization-bs-en></div> 
+    <!--<img src="/assets/bcgnwt1.jpg" class="stretch" alt="" /> -->
+    <!--navbar-->
+<nav class="navbar navbar-custom navbar-fixed-top ribbon nblue" role="navigation">
+    <div class="localization-bs-en" localization-bs-en></div>
+     <div class="container" ng-controller="HomeAdminController">
+        <div class="navbar-header page-scroll">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+              <i class="fa fa-bars"></i>
+        </button>
+        <a class="navbar-brand" href="#/home_admin">
+           <h1 class="naslov1">eSAVJETOVALISTE</h1>
+        </a>
+          </div>
+          <div class="collapse navbar-collapse navbar-right navbar-main-collapse navbar-font">
+           <ul class="nav navbar-nav navbar-font">
+          <li><a href ng-click="openHome()"><span>{{ "HOME" | translate }}</span></a></li>
+          <li><a href><span>{{ "ABOUT" | translate }}</span></a></li>
+          <li><a ng-controller="LoginController" href ng-click="openRegistration()"><span>{{ 'REGISTER' | translate }}</span></a></li>
+          </div>
+       </div>
+   </nav>
+<!--/.navbar-->
+
+
+</br></br></br>
     <div class="container">    
     <div style="height:600px">
     <div class="account-wall">
@@ -58,4 +81,3 @@
 
 </div>
 </div>
-<div id="copyright">© Copyright 2015</div>
