--- a/app/assets/javascripts/templates/update_category.html.erb
+++ b/app/assets/javascripts/templates/update_category.html.erb
@@ -6,25 +6,37 @@
 </head> 
 	<div class="bcgnonee"> 
 		<!--navbar-->
-		<nav class="navbar navbar-custom navbar-fixed-top ribbon nblue" role="navigation">
-		    <div class="localization-bs-en" localization-bs-en></div>
-		     <div class="container" ng-controller="HomeAdminController">
-		        <div class="navbar-header page-scroll">
-		           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-		              <i class="fa fa-bars"></i>
-		        </button>
-		        <a class="navbar-brand" href ng-click="openHomeAdmin()">
-		           <h1 class="naslov1">eSAVJETOVALISTE</h1>
-		        </a>
-		          </div>
-		          <div class="collapse navbar-collapse navbar-right navbar-main-collapse navbar-font">
-		           <ul class="nav navbar-nav navbar-font">
-		           <li><a href ng-click="openHomeAdmin()"><span>{{ "HOME" | translate }}</span></a></li>
-		         <li><a href ng-click="logout()"><span>{{ "LOGOUT" | translate }}</span></a></li>
-		            </ul>
-		          </div>
-		       </div>
-		   </nav>
+<nav class="navbar navbar-custom navbar-fixed-top ribbon nblue" role="navigation">
+    <div class="localization-bs-en" localization-bs-en></div>
+     <div class="container" ng-controller="HomeAdminController">
+        <div class="navbar-header page-scroll">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+              <i class="fa fa-bars"></i>
+        </button>
+        <a class="navbar-brand" href="#/home_admin">
+           <h1 class="naslov1">eSAVJETOVALISTE</h1>
+        </a>
+          </div>
+          <div class="collapse navbar-collapse navbar-right navbar-main-collapse navbar-font">
+           <ul class="nav navbar-nav navbar-font">
+
+            <li class="dropdown">
+              <a href class="dropdown-toggle" data-toggle="dropdown"><span>{{ "ADMIN" | translate }}</span> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a ng-click="openUserManagement()" href><span>{{ 'USRMNG' | translate }}</span></a></li>
+                <li><a ng-click="openFeedback()" href><span>{{ 'FEEDBACKMNG' | translate }}</span></a></li>
+                <li><a ng-click="openCategory()" href><span>{{ 'CATEGORYMNG' | translate }}</span></a></li>
+                <li><a ng-click="openRoleManagement()" href><span>{{ 'USRROLE' | translate }}</span></a></li>
+                <li><a ng-click="openChartManagement()" href><span>{{ 'GRAF' | translate }}</span></a></li>
+              </ul>
+            </li>
+          <li><a href ng-click="openChangePass()"><span>{{ "CHANGE_PASS" | translate }}</span></a></li>
+         <li><a href ng-click="logout()"><span>{{ "LOGOUT" | translate }}</span></a></li>
+            </ul>
+          </div>
+       </div>
+   </nav>
+<!--/.navbar-->
 		<!--/.navbar-->
 		</br></br></br></br></br></br> 
 		<div class="heading-contact-title">
