--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -716,7 +716,7 @@ form#contact-form input, form#contact-form select, form#contact-form textarea {
   box-shadow: none;
 }
 #reservation-form{
-  margin-bottom:100px;
+  /*margin-bottom:100px;*/
 }
 #contact-form{
   margin-bottom:50px;
@@ -800,8 +800,8 @@ form#contact-form input, form#contact-form select, form#contact-form textarea {
   margin-left:250px;
 }
 .tabela1{
-  width:40%;
-  margin-left:180px;
+  width:42%;
+  margin-left:30%;
 }
 /*end of design for feedback_admin*/
 .btn-usr-mng{
@@ -970,7 +970,8 @@ animation-timing-function:ease-out
 
 .bcgnonee::after {
   content: "";
-  background: url('/assets/bg1.jpg') no-repeat center center fixed !important;
+  /*background: url('/assets/bg1.jpg') no-repeat center center fixed !important;*/
+  background-color: white;
   opacity: 0.4;
   top: 0;
   left: 0;
@@ -1037,4 +1038,37 @@ animation-timing-function:ease-out
 /*end of home page doctors*/
 .time-size{
   width:50px !important;
+}
+
+.time-picker {
+  table td input {
+    width: 50px;
+  }
+  table td a {
+    padding-top: 3px;
+    padding-bottom: 0;
+  } 
+}
+.time-title {
+  margin-top: 0;
+}
+.msg-desc {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.well-sm {
+    margin-bottom: 12px;
+}
+.res-button {
+  position: absolute;
+  left: 35px !important;
+  margin-top: 50px !important;
+  width: 100px !important;
+}
+.boxed-grey {
+   border: 1px solid rgb(221, 221, 221);
+  border-radius: 4px;
+}
+h3 {
+  font-family: 'Open Sans', sans-serif;
 }
