--- a/app/assets/javascripts/templates/category_admin.html.erb
+++ b/app/assets/javascripts/templates/category_admin.html.erb
@@ -52,9 +52,9 @@
 
 </div>
 <br>
-<div style="text-align:center;" ng-controller="RegistrationUserByManagerController">
+<div style="text-align:center;"  ng-controller="CreateCategoryControllerByAdmin">
   Dodavanje nove kategorije:
-  <a href  ng-controller="CreateCategoryControllerByAdmin" ng-click="createCategoryByAdmin()"   ng-disabled="myForm.$invalid"> OVDJE</a>
+  <a href ng-controller="CreateCategoryControllerByAdmin" ng-click="createCategoryByAdmin()"> OVDJE</a>
 </div>
 </br></br>
 
