--- a/app/assets/javascripts/templates/password-reset.html.erb
+++ b/app/assets/javascripts/templates/password-reset.html.erb
@@ -1,6 +1,30 @@
 <!--Form for password reset after user hits forgot account button-->
 <div id="background">
-    <img src="/assets/bcgnwt1.jpg" class="stretch" alt="" /> 
+    <!--<img src="/assets/bcgnwt1.jpg" class="stretch" alt="" /> -->
+    <!--navbar-->
+<nav class="navbar navbar-custom navbar-fixed-top ribbon nblue" role="navigation">
+    <div class="localization-bs-en" localization-bs-en></div>
+     <div class="container">
+        <div class="navbar-header page-scroll">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+              <i class="fa fa-bars"></i>
+        </button>
+        <a class="navbar-brand" href="#/home_admin">
+           <h1 class="naslov1">eSAVJETOVALISTE</h1>
+        </a>
+          </div>
+          <div class="collapse navbar-collapse navbar-right navbar-main-collapse navbar-font">
+           <ul class="nav navbar-nav navbar-font">
+          <li><a  ng-controller="LoginController" href ng-click="openLogin()"><span>{{ "HOME" | translate }}</span></a></li>
+          <li><a href><span>{{ "ABOUT" | translate }}</span></a></li>
+          <li><a ng-controller="LoginController" href ng-click="openRegistration()"><span>{{ 'REGISTER' | translate }}</span></a></li>
+          </div>
+       </div>
+   </nav>
+<!--/.navbar-->
+
+
+</br></br></br>
     <div class="container">
       <div style="height:600px">
         <div class="forgot-acc">
