--- a/app/assets/javascripts/templates/register_user_by_manager.html.erb
+++ b/app/assets/javascripts/templates/register_user_by_manager.html.erb
@@ -3,8 +3,38 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
+<nav class="navbar navbar-custom navbar-fixed-top ribbon nblue" role="navigation">
+    <div class="localization-bs-en" localization-bs-en></div>
+     <div class="container" ng-controller="HomeAdminController">
+        <div class="navbar-header page-scroll">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+              <i class="fa fa-bars"></i>
+        </button>
+        <a class="navbar-brand" href="#/home_admin">
+           <h1 class="naslov1">eSAVJETOVALISTE</h1>
+        </a>
+          </div>
+          <div class="collapse navbar-collapse navbar-right navbar-main-collapse navbar-font">
+           <ul class="nav navbar-nav navbar-font">
+
+            <li class="dropdown">
+              <a href class="dropdown-toggle" data-toggle="dropdown"><span>{{ "ADMIN" | translate }}</span> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a ng-click="openUserManagement()" href><span>{{ 'USRMNG' | translate }}</span></a></li>
+                <li><a ng-click="openFeedback()" href><span>{{ 'FEEDBACKMNG' | translate }}</span></a></li>
+                <li><a ng-click="openCategory()" href><span>{{ 'CATEGORYMNG' | translate }}</span></a></li>
+                <li><a ng-click="openRoleManagement()" href><span>{{ 'USRROLE' | translate }}</span></a></li>
+                <li><a ng-click="openChartManagement()" href><span>{{ 'GRAF' | translate }}</span></a></li>
+              </ul>
+            </li>
+          <li><a href ng-click="openChangePass()"><span>{{ "CHANGE_PASS" | translate }}</span></a></li>
+         <li><a href ng-click="logout()"><span>{{ "LOGOUT" | translate }}</span></a></li>
+            </ul>
+          </div>
+       </div>
+   </nav><br><br><br><br><br><br>
 <div  class="bcgnonee">
-<div class="navbar" navbar></div>
+
 </br>
 	<div class="heading-contact-title">
             <div class="container">
@@ -21,7 +51,7 @@
             </div>
             </div>
 	<div class="container">    
-	<div class="bcgnone" style="height:600px">
+	<div class="bcgnone" style="height:500px">
 	    <div class="edit-user-by-mng-wall">
 			<form class="form-register form-inline" role="form" name="myForm" ng-controller="RegistrationUserByManagerController">
 
