--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,7 +55,7 @@ a:hover{
     position: relative;
     font-size: 16px;
     height: auto;
-    padding: 10px;
+    /*padding: 10px;*/
     width:320px;
     height:30px;
 }
@@ -250,7 +250,7 @@ a:hover{
     font-size: 16px;
     padding: 7px;
     width:320px !important;
-    height:30px; 
+   /* height:30px;*/ 
 }
 .form-register .btn
 {
@@ -258,7 +258,7 @@ a:hover{
     font-size: 16px;
     padding: 7px;
     width:328px !important;
-    height:30px; 
+    height:35px; 
 }
 .form-register .form-control:focus
 {
